--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react-native": "^0.19.0",
-    "react-native-button": "^1.3.1"
+    "react-native-button": "^1.3.1",
+    "react-native-lock-ios": "0.0.5"
   }
 }
